<resources>
    <string name="app_name">TutorBoard</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="create">Create</string>
    <string name="join">Join</string>
    <string name="title_activity_main2">LoginActivity</string>
    <string name="cancel">Cancel</string>
    <string name="login">Login</string>
    <string name="password">Create Password</string>
    <string name="no_account">No Account?</string>
    <string name="tutor">Tutor</string>
    <string name="student">Student</string>
    <string name="tell">Tell us about yourself.</string>
    <string name="proceed">Continue</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_messages">Messages</string>
    <string name="title_profile">My Profile</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="mastery">Subject of Mastery</string>
    <string name="bio">Give us a short bio of yourself:</string>
    <string name="tutorImage">Board</string>
    <string name="send">Send a Message</string>
    <string name="taylor">Taylor Left</string>
    <string name="mark">Mark Disco</string>
    <string name="next_button_description">image used as button to login and proceed to next step</string>

</resources>
